--- a/index.html
+++ b/index.html
@@ -1,28 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-    <title>В Україні тепличні огірки подешевшали на 12%</title>
-    <p>16 лютого 2020 - 16:19</p>
-    <h1>В Україні тепличні огірки подешевшали на 12%</h1>
-    <img src="https://storage.agravery.com/uploads/.thumbs/1_pixabay/cucumbers-2446470_1280.jpg" height="480" width="680">
-    <div><a href="https://pixabay.com/">pixabay.com</a></div>
-    <p><b>На ринку «Столичний» у Києві помітно збільшилася пропозиція тепличного огірка, оптова ціна якого станом на 13 лютого складає 70-85 грн/кг.</b></p>
-    <p>Про це повідомив Іван Григорович, аналітик РСГП «Столичний», передає <a href="agronews.ua">agronews.ua.</a></p>
-    <p>Варто зазначити, що на попередньому тижні ціна на тепличні огірки становила 80−90 грн/кг.</p>
-    <p>«Ціна на огірки залежить від сорту та якості. Загалом, дешевше — гладкі сорти, дорожче — корнішонного типу», — пояснює Григорович.</p>
-    <p>Однак огірки українського виробництва залишаються дорожчими за імпортовані на 15−20 грн/кг.</p>
-    <p>Нагадаємо, на Кіровоградщині <a href="https://agravery.com/uk/posts/show/na-kirovogradsini-buduut-ovoceshovise-za-20-mln-griven">будують овочесховище за 20 млн гривень.</a></p>
-    <p><b>ТЕГИ</b> 
-        <a href="https://agravery.com/uk/posts/tag/show/703">огірки,</a> 
-        <a href="https://agravery.com/uk/posts/tag/show/11015">ціна на огірки,</a>
-        <a href="https://agravery.com/uk/posts/tag/show/11680">тепличні огірки,</a>
-        <a href="https://agravery.com/uk/posts/tag/show/17959">Іван Григорович,</a>
-        <a href="https://agravery.com/uk/posts/tag/show/17960">РСГП «Столичний»</a>
-    </p>
-    <img src="https://floragrowing.com/sites/default/files/img-plants/cucumbers_original.jpg" height="480" width="680">
-    <p><a href="https://agravery.com/uk/posts/show/v-ukraini-teplicni-ogirki-podesevsali-na-12`">оригинал статьи</a> </p>
+  <meta charset="UTF-8">
+  <title>Document</title>
+  <link href = "style.css" rel = "stylesheet">
 </head>
 <body>
-    
+  <div class = "wrapper">
+    <header>
+      Шапка
+    </header>
+    <nav>
+     <ul class="menu">
+      <li><a href=#>Меню 1</a></li>
+      <li><a href=#>Меню 2</a></li>
+      <li><a href=#>Меню 3</a></li>
+      <li><a href=#>Меню 4</a></li>
+      <li><a href=#>Меню 5</a></li>
+  </ul>
+    </nav>
+    <main>
+      <aside>
+        Сайдбар
+      </aside>
+      <article>
+        <h1>Заголовок для статьи</h1>
+		<p>Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. 
+			Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. 
+			Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи.
+			Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. 
+			Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. 		
+			Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи.</p>
+			
+		<p>Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. 
+			Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. 
+			Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи.
+			Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. 
+			Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. 		
+			Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи.</p>
+      </article>
+    </main>
+
+    <footer>
+      Футер с копирайтом
+    </footer>
+  </div>
 </body>
 </html>
