--- a/index.html
+++ b/index.html
@@ -2,48 +2,112 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
-  <link href = "style.css" rel = "stylesheet">
+  <title>Кафедра экономической кибернетики</title>
+  <link  rel = "stylesheet" href = "style.css">
 </head>
 <body>
-  <div class = "wrapper">
-    <header>
-      Шапка
-    </header>
-    <nav>
-     <ul class="menu">
-      <li><a href=#>Меню 1</a></li>
-      <li><a href=#>Меню 2</a></li>
-      <li><a href=#>Меню 3</a></li>
-      <li><a href=#>Меню 4</a></li>
-      <li><a href=#>Меню 5</a></li>
-  </ul>
-    </nav>
-    <main>
-      <aside>
-        Сайдбар
-      </aside>
-      <article>
-        <h1>Заголовок для статьи</h1>
-		<p>Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. 
-			Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. 
-			Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи.
-			Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. 
-			Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. 		
-			Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи.</p>
-			
-		<p>Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. 
-			Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. 
-			Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи.
-			Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. 
-			Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. 		
-			Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи. Текст статьи.</p>
-      </article>
-    </main>
-
-    <footer>
-      Футер с копирайтом
-    </footer>
-  </div>
+    <div class= "wrapper">
+        <div class="d">
+            <img src= "merkulova.jpg" alt="">
+            <p><a href="#">Меркулова Тамара Вікторівна</a></p>
+            <p>зав.каф., професор, д.е.н.</p>
+        </div>
+        <div class="d">
+            <img src= "yancevich.jpg" alt="">
+            <p><a href="#">Янцевич Артем Артемович</a></p>
+            <p>професор, д.ф.-м.н.</p>
+        </div>
+        <div class="d">
+            <img src= "nosova.jpg" alt="">
+            <p><a href="#">Носова Ольга Валентинівна</a></p>
+            <p>професор, д.е.н.</p>
+        </div>
+        <div class="d">
+            <img src= "danich.jpg" alt="">
+            <p><a href="#">Даніч Віталій Миколайович</a></p>
+            <p>професор, д.е.н.</p>
+        </div>
+        <div class="d">
+            <img src= "kononova.jpg" alt="">
+            <p><a href="#">Кононова Катерина Юріївна </a></p>
+            <p>професор, д.е.н.</p>
+        </div>
+        <div class="d">
+            <img src= "bitkova.jpg" alt="">
+            <p><a href="#">Біткова Тетяна Вікторівна </a></p>
+            <p>доцент, к.е.н.</p>
+        </div>
+        <div class="d">
+            <img src= "lubenets.jpg" alt="">
+            <p><a href="#">Лубенець Сергій Васильович</a></p>
+            <p>доцент, к.е.н.</p>
+        </div>
+        <div class="d">
+            <img src= "zabuga.jpg" alt="">
+            <p><a href="#">Забуга Сергій Іванович </a></p>
+            <p>доцент, к.е.н.</p>
+        </div>
+        <div class="d">
+            <img src= "kovpak.jpg" alt="">
+            <p><a href="#">Ковпак Ельвіра Олександрівна </a></p>
+            <p>доцент, к.е.н.</p>
+        </div>
+        <div class="d">
+            <img src= "petrova.jpg" alt="">
+            <p><a href="#">Петрова Анжела Юріївна</a></p>
+            <p>доцент, к.е.н.</p>
+        </div>
+        <div class="d">
+            <img src= "nikolaeva.jpg" alt="">
+            <p><a href="#">Петрова Анжела Юріївна</a></p>
+            <p>доцент, к.е.н.</p>
+        </div>
+        <div class="d">
+            <img src= "guznenkov.jpg" alt="">
+            <p><a href="#">Гузненков Юрій Георгійович</a></p>
+            <p>ст. викладач</p>
+        </div>
+        <div class="d">
+            <img src= "zubova.jpg" alt="">
+            <p><a href="#">Зубова Віталіна Вікторівна</a></p>
+            <p>ст. викладач</p>
+        </div>
+        <div class="d">
+            <img src= "titomir.jpg" alt="">
+            <p><a href="">Тітомир Олена Сергіївна</a></p>
+            <p>ст. викладач</p>
+        </div>
+        <div class="d">
+            <img src= "deyneka.jpg" alt="">
+            <p><a href="#">Дейнека Маргарита Олесандрівна</a></p>
+            <p>ст. викладач</p>
+        </div>
+        <div class="d">
+            <img src= "sazonova.jpg" alt="">
+            <p><a href="#">Сазонова Олена Станиславівна</a></p>
+            <p>викладач</p>
+        </div>
+        <div class="d">
+            <img src= "maksymov.jpg" alt="">
+            <p><a href="#">Максимов Михайло Сергійович</a></p>
+            <p>викладач</p>
+        </div>
+        <div class="d">
+            <img src= "nazarenko.jpg" alt="">
+            <p><a href="#">Назаренко Наталія Валентинівна</a></p>
+            <p>викладач</p>
+        </div>
+        <div class="d">
+            <img src= "dek.jpg" alt="">
+            <p><a href="#">Дек Антон Олегович</a></p>
+            <p>аспірант</p>
+        </div>
+        <div class="d">
+            <img src= "bohdanova.jpg" alt="">
+            <p><a href="#">Богданова Ганна Сергіївна</a></p>
+            <p>викладач, аспірант</p>
+        </div>
+        
+</div>
 </body>
-</html>
+</html>     
